@@ -1,3 +1,5 @@
+[B]2.3.6[/B]
+- Poprawka: ogólne po zmianach na filmweb.pl
 [B]2.3.5[/B]
 - Poprawka: pobieranie opisu
 [B]2.3.4[/B]
